--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="avatar" aria-hidden="true">SC</div>
         <div>
           <h1>Sanjit Chakrabarti</h1>
-          <div class="sub">Age 29 · 5′10″ · 75KG - 88KG · Bengali</div>
+          <div class="sub">Age 29 · Height - 5′10″ · Weight - 88KG · Bengali</div>
           <div class="hero-stats">
             <span class="pill">Rarhi Brahmin</span>
             <span class="pill">Kashyap gotra</span>
@@ -70,10 +70,10 @@
       <section class="card" id="gallery">
         <div class="k">Gallery</div>
         <div class="gallery-grid">
-          <div class="ph">Photo</div>
-          <div class="ph">Photo</div>
-          <div class="ph">Photo</div>
-          <div class="ph">Photo</div>
+          <div class="ph">1.jpg</div>
+          <div class="ph">3.jpg</div>
+          <div class="ph">4.jpg</div>
+          <div class="ph">5.jpg</div>
         </div>
         <div class="sub">Replace with your photos.</div>
       </section>
