--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="wrap">
     <header>
       <div class="id">
-        <div class="avatar" aria-hidden="true">SC</div>
+        <div class="avatar" aria-hidden="true"><img src="profile.jpg" alt=""></div>
         <div>
           <h1>Sanjit Chakrabarti</h1>
           <div class="sub">Age 29 · Height - 5′10″ · Weight - 88KG · Bengali</div>
@@ -70,13 +70,12 @@
       <section class="card" id="gallery">
         <div class="k">Gallery</div>
         <div class="gallery-grid">
-          <div class="ph">1.jpg</div>
-          <div class="ph">3.jpg</div>
-          <div class="ph">4.jpg</div>
-          <div class="ph">5.jpg</div>
+          <div class="ph"><img src="1.jpg" alt=""></div>
+          <div class="ph"><img src="3.jpg" alt=""></div>
+          <div class="ph"><img src="4.jpg" alt=""></div>
+          <div class="ph"><img src="5.jpg" alt=""></div>
         </div>
-        <div class="sub">Replace with your photos.</div>
-      </section>
+       </section>
       <section class="card">
         <div class="grid cols-3">
           <div>
