--- a/index.html
+++ b/index.html
@@ -8,26 +8,33 @@
   <meta property="og:title" content="Sanjit Chakrabarti — Marriage Bio" />
   <meta property="og:type" content="profile" />
   <meta property="og:description" content="Education, profession, family, fitness, hobbies, and partner preferences." />
+  <!-- Favicon -->
+  <link rel="icon" href="profile.jpg" type="image/jpeg" sizes="any" />
   <style>
     :root{
       --bg:#0b0f14; --card:#0f1720; --muted:#9fb0c3; --text:#e6edf5; --accent:#5dd0ff; --line:#1e2937;
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,"Noto Sans",sans-serif}
+    body{overflow-x:hidden}
+    img{max-width:100%;height:auto;display:block}
     a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
     .wrap{max-width:980px;margin:auto;padding:24px}
-    header{display:flex;gap:24px;align-items:center;justify-content:space-between;margin:16px 0 24px}
+    header{display:flex;gap:24px;align-items:center;justify-content:space-between;margin:16px 0 24px;flex-wrap:wrap}
     .id{display:flex;gap:20px;align-items:center}
-    .avatar{width:96px;height:96px;border-radius:12px;background:linear-gradient(135deg,#203040,#0b0f14);display:grid;place-items:center;color:var(--muted);font-weight:700}
+    .avatar{width:96px;height:96px;border-radius:12px;background:linear-gradient(135deg,#203040,#0b0f14);overflow:hidden}
+    .avatar img{width:100%;height:100%;object-fit:cover}
     h1{font-size:28px;margin:0}
     .sub{color:var(--muted);font-size:14px}
     .btns{display:flex;gap:12px;flex-wrap:wrap}
-    button,.btn{background:var(--accent);color:#081018;border:0;padding:10px 14px;border-radius:10px;font-weight:600;cursor:pointer}
+    button,.btn{background:var(--accent);color:#081018;border:0;padding:10px 14px;border-radius:10px;font-weight:600;cursor:pointer;text-align:center}
     .btn.alt{background:#1b2838;color:var(--text);border:1px solid var(--line)}
     main{display:grid;gap:18px}
     .card{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:16px}
     .grid{display:grid;gap:12px}
+    .grid.cols-2{grid-template-columns:1fr}
+    .grid.cols-3{grid-template-columns:1fr}
     @media(min-width:760px){.grid.cols-2{grid-template-columns:1fr 1fr}}
     @media(min-width:1000px){.grid.cols-3{grid-template-columns:repeat(3,1fr)}}
     .k{color:var(--muted);font-size:12px;text-transform:uppercase;letter-spacing:.06em}
@@ -39,16 +46,34 @@
     .pill{display:inline-block;background:#152231;border:1px solid var(--line);padding:6px 10px;border-radius:999px;margin:4px 6px 0 0;font-size:13px}
     .hero-stats{display:flex;flex-wrap:wrap;gap:8px;margin-top:6px}
     .print-note{color:var(--muted);font-size:12px}
-      .gallery-grid{display:grid;grid-template-columns:repeat(2,1fr);gap:10px;margin-top:10px}
-    @media(min-width:760px){.gallery-grid{grid-template-columns:repeat(4,1fr)}}
-    .ph{aspect-ratio:3/4;background:#152231;border:1px dashed var(--line);border-radius:12px;display:grid;place-items:center;color:var(--muted);font-weight:600}
+    /* Gallery */
+    .gallery-grid{display:grid;grid-template-columns:1fr;gap:10px;margin-top:10px}
+    @media(min-width:760px){.gallery-grid{grid-template-columns:repeat(2,1fr)}}
+    @media(min-width:1000px){.gallery-grid{grid-template-columns:repeat(4,1fr)}}
+    .ph{aspect-ratio:3/4;background:#152231;border:1px dashed var(--line);border-radius:12px;overflow:hidden;position:relative}
+    .ph img{width:100%;height:100%;object-fit:cover;cursor:pointer}
+
+    /* Lightbox */
+    .lightbox[hidden]{display:none}
+    .lightbox{position:fixed;inset:0;background:rgba(0,0,0,.85);display:flex;align-items:center;justify-content:center;padding:20px;z-index:1000}
+    .lightbox img{max-width:90vw;max-height:85vh;border-radius:12px}
+    .lightbox .close{position:absolute;top:16px;right:16px;background:#1b2838;color:var(--text);border:1px solid var(--line);padding:8px 12px;border-radius:999px;font-weight:700;cursor:pointer}
+
+    /* Mobile tweaks */
+    @media(max-width:759px){
+      header{flex-direction:column;align-items:flex-start}
+      .id{width:100%}
+      .avatar{display:none}
+      .btns{width:100%;display:grid;grid-template-columns:1fr 1fr}
+      .btns > *{width:100%}
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
     <header>
       <div class="id">
-        <div class="avatar" aria-hidden="true"><img src="profile.jpg" alt=""></div>
+        <div class="avatar" aria-hidden="true"><img src="profile.jpg" alt="" /></div>
         <div>
           <h1>Sanjit Chakrabarti</h1>
           <div class="sub">Age 29 · Height - 5′10″ · Weight - 88KG · Bengali</div>
@@ -61,7 +86,7 @@
         </div>
       </div>
       <div class="btns">
-        <button id="btnPdf">PDF</button>
+        <button id="btnPdf" type="button">PDF</button>
         <a class="btn alt" href="https://wa.me/917278135942?text=looking%20for%20marriage" target="_blank" rel="noopener">Contact</a>
       </div>
     </header>
@@ -70,12 +95,13 @@
       <section class="card" id="gallery">
         <div class="k">Gallery</div>
         <div class="gallery-grid">
-          <div class="ph"><img src="1.jpg" alt=""></div>
-          <div class="ph"><img src="3.jpg" alt=""></div>
-          <div class="ph"><img src="4.jpg" alt=""></div>
-          <div class="ph"><img src="5.jpg" alt=""></div>
+          <div class="ph"><img src="1.jpg" alt="Photo 1" /></div>
+          <div class="ph"><img src="3.jpg" alt="Photo 2" /></div>
+          <div class="ph"><img src="4.jpg" alt="Photo 3" /></div>
+          <div class="ph"><img src="5.jpg" alt="Photo 4" /></div>
         </div>
        </section>
+
       <section class="card">
         <div class="grid cols-3">
           <div>
@@ -155,10 +181,18 @@
 
     <footer></footer>
   </div>
+
+  <!-- Lightbox -->
+  <div id="lightbox" class="lightbox" role="dialog" aria-modal="true" aria-label="Image preview" hidden>
+    <img id="lightboxImg" alt="Preview" />
+    <button class="close" type="button" aria-label="Close">✕</button>
+  </div>
+
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 <script>
 window.addEventListener('DOMContentLoaded',()=>{
+  // PDF
   const btn=document.getElementById('btnPdf');
   if(btn){
     btn.addEventListener('click', async ()=>{
@@ -184,6 +218,32 @@ window.addEventListener('DOMContentLoaded',()=>{
       pdf.save('Sanjit-Marriage-Bio.pdf');
     });
   }
+
+  // Lightbox
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.getElementById('lightboxImg');
+  const closeBtn = lightbox.querySelector('.close');
+
+  function openLightbox(src, alt){
+    lightboxImg.src = src;
+    lightboxImg.alt = alt || 'Preview';
+    lightbox.removeAttribute('hidden');
+  }
+  function closeLightbox(){
+    lightbox.setAttribute('hidden','');
+    lightboxImg.src='';
+  }
+
+  document.querySelectorAll('#gallery img').forEach(img=>{
+    img.addEventListener('click',()=>openLightbox(img.src, img.alt));
+  });
+  closeBtn.addEventListener('click', closeLightbox);
+  lightbox.addEventListener('click', (e)=>{
+    if(e.target === lightbox) closeLightbox();
+  });
+  document.addEventListener('keydown', (e)=>{
+    if(e.key==='Escape' && !lightbox.hasAttribute('hidden')) closeLightbox();
+  });
 });
 </script>
 </body>
