--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     .btns{display:flex;gap:12px;flex-wrap:wrap}
     button,.btn{background:var(--accent);color:#081018;border:0;padding:10px 14px;border-radius:10px;font-weight:600;cursor:pointer;text-align:center}
     .btn.alt{background:#1b2838;color:var(--text);border:1px solid var(--line)}
+    .btn.whatsapp{background:#25D366;color:#fff;display:inline-flex;align-items:center;gap:8px}
+    .btn.whatsapp svg{width:18px;height:18px}
     main{display:grid;gap:18px}
     .card{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:16px}
     .grid{display:grid;gap:12px}
@@ -64,7 +66,7 @@
       header{flex-direction:column;align-items:flex-start}
       .id{width:100%}
       .avatar{display:none}
-      .btns{width:100%;display:grid;grid-template-columns:1fr 1fr}
+      .btns{width:100%;display:grid;grid-template-columns:1fr}
       .btns > *{width:100%}
     }
   </style>
@@ -76,7 +78,7 @@
         <div class="avatar" aria-hidden="true"><img src="profile.jpg" alt="" /></div>
         <div>
           <h1>Sanjit Chakrabarti</h1>
-          <div class="sub">Age 29 · Height - 5′10″ · Weight - 88KG · Bengali</div>
+          <div class=\"sub\">Age <span id=\"age\">29</span> · Height - 5′10″ · Weight - 88KG · Bengali</div>
           <div class="hero-stats">
             <span class="pill">Rarhi Brahmin</span>
             <span class="pill">Kashyap gotra</span>
@@ -86,8 +88,10 @@
         </div>
       </div>
       <div class="btns">
-        <button id="btnPdf" type="button">PDF</button>
-        <a class="btn alt" href="https://wa.me/917278135942?text=looking%20for%20marriage" target="_blank" rel="noopener">Contact</a>
+        <a class="btn whatsapp" href="https://wa.me/917278135942?text=looking%20for%20marriage" target="_blank" rel="noopener">
+          <svg viewBox="0 0 32 32" aria-hidden="true" focusable="false"><path fill="currentColor" d="M19.11 17.09c-.3-.15-1.77-.87-2.04-.97-.27-.1-.47-.15-.67.15-.2.3-.77.97-.94 1.17-.17.2-.35.22-.65.07-.3-.15-1.26-.46-2.4-1.47-.88-.78-1.47-1.74-1.64-2.04-.17-.3-.02-.46.13-.61.13-.13.3-.35.45-.52.15-.17.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.67-1.62-.92-2.22-.24-.58-.49-.5-.67-.5-.17 0-.37-.02-.57-.02-.2 0-.52.07-.8.37-.27.3-1.04 1.02-1.04 2.47s1.07 2.86 1.22 3.06c.15.2 2.1 3.21 5.07 4.5.71.31 1.27.49 1.7.63.71.23 1.36.2 1.87.12.57-.08 1.77-.72 2.02-1.41.25-.69.25-1.28.17-1.41-.07-.13-.27-.2-.57-.35zM16.03 3C9.93 3 5 7.93 5 14.03c0 2.48.88 4.76 2.36 6.56L6 27l6.6-1.73c1.73.94 3.71 1.48 5.82 1.48 6.1 0 11.03-4.93 11.03-11.03S22.13 3 16.03 3zm0 20.1c-1.92 0-3.71-.57-5.2-1.55l-.37-.24-3.91 1.02 1.04-3.81-.25-.39a9.01 9.01 0 1 1 8.69 4.97z"/></svg>
+          WhatsApp me
+        </a>
       </div>
     </header>
 
@@ -129,7 +133,7 @@
         <div class="v">Founder & CEO, digital marketing start‑up in Delhi · ₹10–15 lakh per annum</div>
         <hr/>
         <div class="k">Company</div>
-        <div class="v">GROWONLINETODAY <span class="sub">(searchable on Google)</span></div>
+        <div class="v">GROWONLINETODAY <span class="sub">(searchable on Google)</span><br><a href="https://growonlinetoday.com" target="_blank" rel="noopener">growonlinetoday.com</a></div>
       </section>
 
       <section class="card">
@@ -188,37 +192,19 @@
     <button class="close" type="button" aria-label="Close">✕</button>
   </div>
 
-<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+
 <script>
 window.addEventListener('DOMContentLoaded',()=>{
-  // PDF
-  const btn=document.getElementById('btnPdf');
-  if(btn){
-    btn.addEventListener('click', async ()=>{
-      const el=document.querySelector('.wrap');
-      const canvas=await html2canvas(el,{scale:2,backgroundColor:'#0b0f14',useCORS:true,scrollY:-window.scrollY});
-      const imgData=canvas.toDataURL('image/jpeg',0.95);
-      const { jsPDF } = window.jspdf;
-      const pdf=new jsPDF('p','mm','a4');
-      const pageWidth=pdf.internal.pageSize.getWidth();
-      const pageHeight=pdf.internal.pageSize.getHeight();
-      const imgWidth=pageWidth;
-      const imgHeight=canvas.height * imgWidth / canvas.width;
-      let heightLeft=imgHeight;
-      let position=0;
-      pdf.addImage(imgData,'JPEG',0,position,imgWidth,imgHeight);
-      heightLeft -= pageHeight;
-      while(heightLeft>0){
-        pdf.addPage();
-        position -= pageHeight;
-        pdf.addImage(imgData,'JPEG',0,position,imgWidth,imgHeight);
-        heightLeft -= pageHeight;
-      }
-      pdf.save('Sanjit-Marriage-Bio.pdf');
-    });
-  }
-
+  // Age auto-calc
+  try {
+    const dob=new Date(1996,5,3); // 3 June 1996 (month is 0-indexed)
+    const t=new Date();
+    let age=t.getFullYear()-dob.getFullYear();
+    const m=t.getMonth()-dob.getMonth();
+    if(m<0 || (m===0 && t.getDate()<dob.getDate())) age--;
+    const el=document.getElementById('age');
+    if(el) el.textContent=String(age);
+  } catch(e) {}
   // Lightbox
   const lightbox = document.getElementById('lightbox');
   const lightboxImg = document.getElementById('lightboxImg');
