--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       </div>
       <div class="btns">
         <a class="btn whatsapp" href="https://wa.me/917278135942?text=looking%20for%20marriage" target="_blank" rel="noopener">
-           WhatsApp me
+          <svg viewBox="0 0 32 32" aria-hidden="true" focusable="false"><path fill="currentColor" d="M19.11 17.09c-.3-.15-1.77-.87-2.04-.97-.27-.1-.47-.15-.67.15-.2.3-.77.97-.94 1.17-.17.2-.35.22-.65.07-.3-.15-1.26-.46-2.4-1.47-.88-.78-1.47-1.74-1.64-2.04-.17-.3-.02-.46.13-.61.13-.13.3-.35.45-.52.15-.17.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.67-1.62-.92-2.22-.24-.58-.49-.5-.67-.5-.17 0-.37-.02-.57-.02-.2 0-.52.07-.8.37-.27.3-1.04 1.02-1.04 2.47s1.07 2.86 1.22 3.06c.15.2 2.1 3.21 5.07 4.5.71.31 1.27.49 1.7.63.71.23 1.36.2 1.87.12.57-.08 1.77-.72 2.02-1.41.25-.69.25-1.28.17-1.41-.07-.13-.27-.2-.57-.35zM16.03 3C9.93 3 5 7.93 5 14.03c0 2.48.88 4.76 2.36 6.56L6 27l6.6-1.73c1.73.94 3.71 1.48 5.82 1.48 6.1 0 11.03-4.93 11.03-11.03S22.13 3 16.03 3zm0 20.1c-1.92 0-3.71-.57-5.2-1.55l-.37-.24-3.91 1.02 1.04-3.81-.25-.39a9.01 9.01 0 1 1 8.69 4.97z"/></svg>
+          WhatsApp me
         </a>
       </div>
     </header>
@@ -169,9 +170,10 @@
       <section class="card" id="preferences">
         <div class="k">LOOKING FOR</div>
         <ul class="list">
-           <li>Well‑educated</li>
+          <li>Bengali Brahmin bride, non‑Kashyap</li>
+          <li>Well‑educated</li>
           <li>Ready to relocate to Delhi after marriage</li>
-         </ul>
+        </ul>
       </section>
 
       <section class="card" id="contact">
@@ -230,5 +232,15 @@ window.addEventListener('DOMContentLoaded',()=>{
   });
 });
 </script>
-</body>
-</html>
+<script>
+(function(){
+  const birth=new Date(1996,5,3);
+  const today=new Date();
+  let age=today.getFullYear()-birth.getFullYear();
+  const m=today.getMonth()-birth.getMonth();
+  if(m<0||(m===0 && today.getDate()<birth.getDate())) age--;
+  const sub=document.querySelector('header .sub');
+  if(sub){ sub.innerHTML=sub.innerHTML.replace(/Age\s*\d+/, 'Age '+age); }
+})();
+</script>
+<script>\n(function(){\n  const birth=new Date(1996,5,3);\n  const today=new Date();\n  let age=today.getFullYear()-birth.getFullYear();\n  const m=today.getMonth()-birth.getMonth();\n  if(m<0||(m===0 && today.getDate()<birth.getDate())) age--;\n  const sub=document.querySelector('header .sub');\n  if(sub){ sub.innerHTML=sub.innerHTML.replace(/Age\\s*\\d+/, 'Age '+age); }\n})();\n</script>\n</body>\n</html>
