--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
   <meta property="og:title" content="Sanjit Chakrabarti — Marriage Bio" />
   <meta property="og:type" content="profile" />
   <meta property="og:description" content="Education, profession, family, fitness, hobbies, and partner preferences." />
-  <!-- Favicon -->
   <link rel="icon" href="profile.jpg" type="image/jpeg" sizes="any" />
   <style>
-    :root{
-      --bg:#0b0f14; --card:#0f1720; --muted:#9fb0c3; --text:#e6edf5; --accent:#5dd0ff; --line:#1e2937;
-    }
+    :root{ --bg:#0b0f14; --card:#0f1720; --muted:#9fb0c3; --text:#e6edf5; --accent:#5dd0ff; --line:#1e2937; }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,"Noto Sans",sans-serif}
     body{overflow-x:hidden}
@@ -48,20 +45,15 @@
     .pill{display:inline-block;background:#152231;border:1px solid var(--line);padding:6px 10px;border-radius:999px;margin:4px 6px 0 0;font-size:13px}
     .hero-stats{display:flex;flex-wrap:wrap;gap:8px;margin-top:6px}
     .print-note{color:var(--muted);font-size:12px}
-    /* Gallery */
     .gallery-grid{display:grid;grid-template-columns:1fr;gap:10px;margin-top:10px}
     @media(min-width:760px){.gallery-grid{grid-template-columns:repeat(2,1fr)}}
     @media(min-width:1000px){.gallery-grid{grid-template-columns:repeat(4,1fr)}}
     .ph{aspect-ratio:3/4;background:#152231;border:1px dashed var(--line);border-radius:12px;overflow:hidden;position:relative}
     .ph img{width:100%;height:100%;object-fit:cover;cursor:pointer}
-
-    /* Lightbox */
     .lightbox[hidden]{display:none}
     .lightbox{position:fixed;inset:0;background:rgba(0,0,0,.85);display:flex;align-items:center;justify-content:center;padding:20px;z-index:1000}
     .lightbox img{max-width:90vw;max-height:85vh;border-radius:12px}
     .lightbox .close{position:absolute;top:16px;right:16px;background:#1b2838;color:var(--text);border:1px solid var(--line);padding:8px 12px;border-radius:999px;font-weight:700;cursor:pointer}
-
-    /* Mobile tweaks */
     @media(max-width:759px){
       header{flex-direction:column;align-items:flex-start}
       .id{width:100%}
@@ -78,7 +70,7 @@
         <div class="avatar" aria-hidden="true"><img src="profile.jpg" alt="" /></div>
         <div>
           <h1>Sanjit Chakrabarti</h1>
-          <div class=\"sub\">Age <span id=\"age\">29</span> · Height - 5′10″ · Weight - 88KG · Bengali</div>
+          <div class="sub">Age <span id="age">29</span> · Height - 5′10″ · Weight - 88KG · Bengali</div>
           <div class="hero-stats">
             <span class="pill">Rarhi Brahmin</span>
             <span class="pill">Kashyap gotra</span>
@@ -88,10 +80,8 @@
         </div>
       </div>
       <div class="btns">
-        <a class="btn whatsapp" href="https://wa.me/917278135942?text=looking%20for%20marriage" target="_blank" rel="noopener">
-          <svg viewBox="0 0 32 32" aria-hidden="true" focusable="false"><path fill="currentColor" d="M19.11 17.09c-.3-.15-1.77-.87-2.04-.97-.27-.1-.47-.15-.67.15-.2.3-.77.97-.94 1.17-.17.2-.35.22-.65.07-.3-.15-1.26-.46-2.4-1.47-.88-.78-1.47-1.74-1.64-2.04-.17-.3-.02-.46.13-.61.13-.13.3-.35.45-.52.15-.17.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.67-1.62-.92-2.22-.24-.58-.49-.5-.67-.5-.17 0-.37-.02-.57-.02-.2 0-.52.07-.8.37-.27.3-1.04 1.02-1.04 2.47s1.07 2.86 1.22 3.06c.15.2 2.1 3.21 5.07 4.5.71.31 1.27.49 1.7.63.71.23 1.36.2 1.87.12.57-.08 1.77-.72 2.02-1.41.25-.69.25-1.28.17-1.41-.07-.13-.27-.2-.57-.35zM16.03 3C9.93 3 5 7.93 5 14.03c0 2.48.88 4.76 2.36 6.56L6 27l6.6-1.73c1.73.94 3.71 1.48 5.82 1.48 6.1 0 11.03-4.93 11.03-11.03S22.13 3 16.03 3zm0 20.1c-1.92 0-3.71-.57-5.2-1.55l-.37-.24-3.91 1.02 1.04-3.81-.25-.39a9.01 9.01 0 1 1 8.69 4.97z"/></svg>
-          WhatsApp me
-        </a>
+        <a class="btn whatsapp" href="https://wa.me/917278135942?text=looking%20for%20marriage" target="_blank" rel="noopener">WhatsApp me</a>
+        <a class="btn alt" href="Sanjit_bio.pdf" target="_blank" rel="noopener">Sanjit_bio.pdf</a>
       </div>
     </header>
 
@@ -104,13 +94,13 @@
           <div class="ph"><img src="4.jpg" alt="Photo 3" /></div>
           <div class="ph"><img src="5.jpg" alt="Photo 4" /></div>
         </div>
-       </section>
+      </section>
 
       <section class="card">
         <div class="grid cols-3">
           <div>
             <div class="k">Date of Birth</div>
-            <div class="v">03‑06‑1996</div>
+            <div class="v">03-06-1996</div>
           </div>
           <div>
             <div class="k">Religion & Caste</div>
@@ -130,7 +120,7 @@
 
       <section class="card">
         <div class="k">Profession</div>
-        <div class="v">Founder & CEO, digital marketing start‑up in Delhi · ₹10–15 lakh per annum</div>
+        <div class="v">Founder & CEO, digital marketing start-up in Delhi · ₹10–15 lakh per annum</div>
         <hr/>
         <div class="k">Company</div>
         <div class="v">GROWONLINETODAY <span class="sub">(searchable on Google)</span><br><a href="https://growonlinetoday.com" target="_blank" rel="noopener">growonlinetoday.com</a></div>
@@ -170,8 +160,7 @@
       <section class="card" id="preferences">
         <div class="k">LOOKING FOR</div>
         <ul class="list">
-          <li>Bengali Brahmin bride, non‑Kashyap</li>
-          <li>Well‑educated</li>
+          <li>Well-educated</li>
           <li>Ready to relocate to Delhi after marriage</li>
         </ul>
       </section>
@@ -180,67 +169,55 @@
         <div class="k">Contact</div>
         <div class="v">WhatsApp me at <a href="https://wa.me/917278135942?text=looking%20for%20marriage" target="_blank" rel="noopener">7278135942</a></div>
       </section>
-
     </main>
 
     <footer></footer>
   </div>
 
-  <!-- Lightbox -->
   <div id="lightbox" class="lightbox" role="dialog" aria-modal="true" aria-label="Image preview" hidden>
     <img id="lightboxImg" alt="Preview" />
     <button class="close" type="button" aria-label="Close">✕</button>
   </div>
 
+  <script>
+  window.addEventListener('DOMContentLoaded',()=>{
+    // Age auto-calc
+    try {
+      const dob=new Date(1996,5,3); // 3 June 1996
+      const t=new Date();
+      let age=t.getFullYear()-dob.getFullYear();
+      const m=t.getMonth()-dob.getMonth();
+      if(m<0 || (m===0 && t.getDate()<dob.getDate())) age--;
+      const el=document.getElementById('age');
+      if(el) el.textContent=String(age);
+    } catch(e) {}
 
-<script>
-window.addEventListener('DOMContentLoaded',()=>{
-  // Age auto-calc
-  try {
-    const dob=new Date(1996,5,3); // 3 June 1996 (month is 0-indexed)
-    const t=new Date();
-    let age=t.getFullYear()-dob.getFullYear();
-    const m=t.getMonth()-dob.getMonth();
-    if(m<0 || (m===0 && t.getDate()<dob.getDate())) age--;
-    const el=document.getElementById('age');
-    if(el) el.textContent=String(age);
-  } catch(e) {}
-  // Lightbox
-  const lightbox = document.getElementById('lightbox');
-  const lightboxImg = document.getElementById('lightboxImg');
-  const closeBtn = lightbox.querySelector('.close');
+    // Lightbox
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightboxImg');
+    const closeBtn = lightbox.querySelector('.close');
 
-  function openLightbox(src, alt){
-    lightboxImg.src = src;
-    lightboxImg.alt = alt || 'Preview';
-    lightbox.removeAttribute('hidden');
-  }
-  function closeLightbox(){
-    lightbox.setAttribute('hidden','');
-    lightboxImg.src='';
-  }
+    function openLightbox(src, alt){
+      lightboxImg.src = src;
+      lightboxImg.alt = alt || 'Preview';
+      lightbox.removeAttribute('hidden');
+    }
+    function closeLightbox(){
+      lightbox.setAttribute('hidden','');
+      lightboxImg.src='';
+    }
 
-  document.querySelectorAll('#gallery img').forEach(img=>{
-    img.addEventListener('click',()=>openLightbox(img.src, img.alt));
+    document.querySelectorAll('#gallery img').forEach(img=>{
+      img.addEventListener('click',()=>openLightbox(img.src, img.alt));
+    });
+    closeBtn.addEventListener('click', closeLightbox);
+    lightbox.addEventListener('click', (e)=>{
+      if(e.target === lightbox) closeLightbox();
+    });
+    document.addEventListener('keydown', (e)=>{
+      if(e.key==='Escape' && !lightbox.hasAttribute('hidden')) closeLightbox();
+    });
   });
-  closeBtn.addEventListener('click', closeLightbox);
-  lightbox.addEventListener('click', (e)=>{
-    if(e.target === lightbox) closeLightbox();
-  });
-  document.addEventListener('keydown', (e)=>{
-    if(e.key==='Escape' && !lightbox.hasAttribute('hidden')) closeLightbox();
-  });
-});
-</script>
-<script>
-(function(){
-  const birth=new Date(1996,5,3);
-  const today=new Date();
-  let age=today.getFullYear()-birth.getFullYear();
-  const m=today.getMonth()-birth.getMonth();
-  if(m<0||(m===0 && today.getDate()<birth.getDate())) age--;
-  const sub=document.querySelector('header .sub');
-  if(sub){ sub.innerHTML=sub.innerHTML.replace(/Age\s*\d+/, 'Age '+age); }
-})();
-</script>
-<script>\n(function(){\n  const birth=new Date(1996,5,3);\n  const today=new Date();\n  let age=today.getFullYear()-birth.getFullYear();\n  const m=today.getMonth()-birth.getMonth();\n  if(m<0||(m===0 && today.getDate()<birth.getDate())) age--;\n  const sub=document.querySelector('header .sub');\n  if(sub){ sub.innerHTML=sub.innerHTML.replace(/Age\\s*\\d+/, 'Age '+age); }\n})();\n</script>\n</body>\n</html>
+  </script>
+</body>
+</html>
